name: gio
version: 1.0

cabal-version: >= 1.2
build-type:          Simple

Library
  default-language:    Haskell2010
  build-depends: base >= 4.5 && <5,
                 directory,
                 old-time,
                 port,
                 containers
                 
  hs-source-dirs: src

  exposed-modules: 
    Graphics.UI.GIO
    Graphics.UI.GIO.Action
    Graphics.UI.GIO.Menu
    Graphics.UI.GIO.Attributes
    Graphics.UI.GIO.MenuType
    Graphics.UI.GIO.Bitmap
    Graphics.UI.GIO.Messages
    Graphics.UI.GIO.Canvas
    Graphics.UI.GIO.Process
    Graphics.UI.GIO.CommonDialogs
    Graphics.UI.GIO.StatusBar
    Graphics.UI.GIO.Controls
    Graphics.UI.GIO.Timer
    Graphics.UI.GIO.Events
    Graphics.UI.GIO.ToolBar
    Graphics.UI.GIO.Font
    Graphics.UI.GIO.Types
    Graphics.UI.GIO.Layout
    Graphics.UI.GIO.Window
